--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   parallax_rain: ^1.1.0
   url_launcher: ^6.1.7
-  simple_icons: ^7.10.0
+  flutter_svg: ^1.1.6
+#  simple_icons: ^7.10.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - image/profile.jpg
+    - image/github.svg
+    - image/leetcode.svg
+    - image/linkedin.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
